<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".user.SignInFragment">

    <ImageView
        android:id="@+id/signInLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signInEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/ic_email"
        android:inputType="textEmailAddress"
        android:drawablePadding="10dp"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@drawable/edit_text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInLogo" />

    <EditText
        android:id="@+id/signInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:background="@drawable/button_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInPassword" />

    <TextView
        android:id="@+id/signInFirstText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/would_you_like_to_register"
        android:textColor="@color/white"
        android:layout_marginEnd="5dp"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toStartOf="@id/signInSecondText"
        app:layout_constraintTop_toBottomOf="@id/signInButton" />

    <TextView
        android:id="@+id/signInSecondText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here"
        android:textColor="@color/white"
        android:layout_marginEnd="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/signInFirstText"
        app:layout_constraintBottom_toBottomOf="@id/signInFirstText" />


</androidx.constraintlayout.widget.ConstraintLayout>